--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/css/lib/swiper-bundle.min.css">
     <!-- Main CSS -->
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>A Developer's Portfolio</title>
 </head>
 <body>
@@ -72,7 +72,7 @@
                         </a>
                     </div>
                     <div class="home_img">
-                        <img src="assets/images/illustration_man_working.png" class="home_blob">
+                        <img src="assets/images/home_image.png" class="home_blob">
                     </div>
                     <div class="home_data">
                         <h1 class="home_title">Hi, I am Moyo</h1>
@@ -110,7 +110,7 @@
             <h2 class="section_title">Who am I?</h2>
             <span class="section_subtitle">My Introduction</span>
             <div class="about_container container grid">
-                <img src="assets/images/illustration_man_working.png" class="about_img">
+                <img src="assets/images/about_image.png" class="about_img">
                 <div class="about_data">
                     <p class="about_description">
                         A Brand Entity Designer, Website Developer and Android Application Developer whose objectives revolve around creating industry standard applications.
