--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div class="about_buttons">
-                        <a download="" href="assets/pdf/Moyosoreoluwa_Odusola_Resume_Junior.pdf" class="button button-flex">
+                        <a download="" href="#" class="button button-flex">
                             Download CV <i class="uil uil-download-alt button_icon"></i>
                         </a>
                     </div>
